fix location of scrollbar

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,7 +16,8 @@ body {
   background-size: cover;
   height: 100%;
   left: 0;
-  padding: 0 4%;
+  overflow-y: scroll;
+  padding: 4%;
   position: absolute;
   top: 0;
   width: 100%;
@@ -34,10 +35,7 @@ a:visited {
 a:hover {color: #6aa;}
 
 .content {
-  height: 100%;
   max-width: 600px;
-  overflow-y: scroll;
-  padding: 4% 0;
   width: 100%;
 }
 
